@@ -48,6 +48,8 @@ static int set_nat_access(fko_ctx_t ctx, fko_cli_options_t *options);
 static int get_rand_port(fko_ctx_t ctx);
 int resolve_ip_http(fko_cli_options_t *options);
 
+#define MAX_CMDLINE_ARGS    50  /* should be way more than enough */
+
 int
 main(int argc, char **argv)
 {
@@ -556,6 +558,8 @@ show_last_command(void)
     exit(EXIT_FAILURE);
 #endif
 
+    verify_file_perms_ownership(args_save_file);
+
     if (get_save_file(args_save_file)) {
         if ((args_file_ptr = fopen(args_save_file, "r")) == NULL) {
             fprintf(stderr, "Could not open args file: %s\n",
@@ -587,7 +591,7 @@ run_last_args(fko_cli_options_t *options)
     char            args_save_file[MAX_PATH_LEN] = {0};
     char            args_str[MAX_LINE_LEN] = {0};
     char            arg_tmp[MAX_LINE_LEN]  = {0};
-    char           *argv_new[200];  /* should be way more than enough */
+    char           *argv_new[MAX_CMDLINE_ARGS];  /* should be way more than enough */
 
 
 #ifdef WIN32
@@ -599,6 +603,8 @@ run_last_args(fko_cli_options_t *options)
 
     if (get_save_file(args_save_file))
     {
+        verify_file_perms_ownership(args_save_file);
+
         if ((args_file_ptr = fopen(args_save_file, "r")) == NULL)
         {
             fprintf(stderr, "Could not open args file: %s\n",
@@ -623,12 +629,17 @@ run_last_args(fko_cli_options_t *options)
                     argv_new[argc_new] = malloc(strlen(arg_tmp)+1);
                     if (argv_new[argc_new] == NULL)
                     {
-                        fprintf(stderr, "malloc failure for cmd line arg.\n");
+                        fprintf(stderr, "[*] malloc failure for cmd line arg.\n");
                         exit(EXIT_FAILURE);
                     }
                     strlcpy(argv_new[argc_new], arg_tmp, strlen(arg_tmp)+1);
                     current_arg_ctr = 0;
                     argc_new++;
+                    if(argc_new >= MAX_CMDLINE_ARGS)
+                    {
+                        fprintf(stderr, "[*] max command line args exceeded.\n");
+                        exit(EXIT_FAILURE);
+                    }
                 }
             }
         }
@@ -661,7 +672,6 @@ save_args(int argc, char **argv)
     return;
 #endif
 
-
     if (get_save_file(args_save_file)) {
         if ((args_file_ptr = fopen(args_save_file, "w")) == NULL) {
             fprintf(stderr, "Could not open args file: %s\n",
@@ -680,6 +690,9 @@ save_args(int argc, char **argv)
         fprintf(args_file_ptr, "%s\n", args_str);
         fclose(args_file_ptr);
     }
+
+    set_file_perms(args_save_file);
+
     return;
 }
 
